# module/user/model/usermodel.go
@@ -32,3 +32,42 @@ type UserResponse struct {
 	CreatedAt time.Time          `json:"created_at"`
 	UpdatedAt time.Time          `json:"updated_at"`
 }
+
+type LoginRequest struct {
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required"`
+}
+
+type LoginResponse struct {
+	AccessToken string       `json:"access_token"`
+	User        UserResponse `json:"user"`
+}
+
+// API Response Models for Swagger
+type CreateUserResponse struct {
+	Data UserResponse `json:"data"`
+}
+
+type LoginAPIResponse struct {
+	Data LoginResponse `json:"data"`
+}
+
+type GetUserResponse struct {
+	Data UserResponse `json:"data"`
+}
+
+type UpdateUserResponse struct {
+	Data UserResponse `json:"data"`
+}
+
+type DeleteUserResponse struct {
+	Message string `json:"message"`
+}
+
+type ListUsersResponse struct {
+	Data []UserResponse `json:"data"`
+}
+
+type ErrorResponse struct {
+	Error string `json:"error"`
+}
